# RagForge

./: .gitignore  README.md  index.html
ragforge/: README.md  app.py  example.py  pyproject.toml  requirements.txt
ragforge/ragforge/: __init__.py  run_god_mode_bar.py
ragforge/ragforge/core/: __init__.py  config.py  engine.py  types.py
ragforge/ragforge/embeddings/: __init__.py  base.py  huggingface_embed.py  ollama_embed.py  openai_embed.py
ragforge/ragforge/ingest/: __init__.py  api_loader.py  base.py  chunker.py  db_loader.py  docx_loader.py  pdf_loader.py  text_loader.py  web_loader.py
ragforge/ragforge/llm/: __init__.py  anthropic_llm.py  base.py  ollama_llm.py  openai_llm.py
ragforge/ragforge/pipeline/: __init__.py  prompts.py  rag_pipeline.py
ragforge/ragforge/retrieval/: __init__.py  reranker.py  retriever.py
ragforge/ragforge/vectorstore/: __init__.py  base.py  qdrant_store.py
ragforge/static/: index.html  readme.html
